--- a/Homework4/Homework4.qmd
+++ b/Homework4/Homework4.qmd
@@ -63,7 +63,7 @@ sigma2_hat_1 <- SSE1 / (n1 - p1)
 
 # beta_hat and Var(beta_hat)
 beta_hat_1 <- XtX_1inv %*% (t(X1) %*% y)
-Var_beta_1 <- as.numeric(sigma2_hat_1) * XtX_1inv   # scalar * matrix (use * not%)
+Var_beta_1 <- as.numeric(sigma2_hat_1) * XtX_1inv
 
 # t-test for slope (assumes col 1 = intercept, col 2 = X1)
 t_stat <- (beta_hat_1[2,1] / sqrt(Var_beta_1[2,2]))
@@ -76,23 +76,17 @@ p_val
 
 b.  Using linear algebra, find the proportion of variation in $y$ that is explained by a linear model with $X_1$ and $X_2$.
 
-    $r^2 = 0.8429$ , meaning 84.29% of the proportion of variance in y is explained by a linear model with both $X1$ and $X2$
+    $r^2 = 0.1911$ , meaning 19.11% of the proportion of variation in y is explained by a linear model with both $X1$ and $X2$
 
 ```{r}
-n2 <- nrow(X2)
+BX2 <- solve(t(X2) %*% X2) %*% t(X2) %*% y
+ybar <- mean(y)
+SSEX2 <- t(y - X2 %*% BX2) %*% (y - X2 %*% BX2)
+SSTX2 <- sum((y - ybar)^2)
+SSMX2 <- SSTX2 - SSEX2
+R2X2 <- SSMX2 / SSTX2
 
-# projection model 
-XtX_2 <- t(X2) %*% X2
-XtX_2inv <- solve(XtX_2)
-P2 <- X2 %*% XtX_2inv %*% t(X2)
-
-# sums of squares
-SST2 <- t(y) %*% y
-SSE2 <- t(y) %*% (diag(n) - P2) %*% y
-
-# proportion of variance explained
-R2 <- 1 - SSE2 / SST2
-R2
+R2X2
 ```
 
 c.  Assume that the linear model in (a) is statistically significant. Using linear algebra, perform a formal hypothesis test to determine if adding the variable $X_2$ to the linear model in (a) is statistically significant.
@@ -103,7 +97,7 @@ c.  Assume that the linear model in (a) is statistically significant. Using line
 
     $H_0: \beta_2 = 0, H_a: \beta_2 \neq 0$
 
-    $F = 5.54, p = 0.0052$ , therefore we reject the null hypothesis and can conclude that adding $X2$ as an explanatory variable to a linear model that already includes $y$ as a response variable and $X1$ as an explanatory variable.
+    $F = 5.54, p = 0.0053$ , therefore we reject the null hypothesis and can conclude that adding $X2$ as an explanatory variable to a linear model that already includes $y$ as a response variable and $X1$ as an explanatory variable.
 
 ```{r}
 # dimensions
@@ -142,23 +136,24 @@ anova(modred, modfull)
 
 d.  For the model that you choose in (b), determine if there are any influential observations.
 
-    From the studentized values of the values of X1 and X2, we can determine that observations 11 and 73 (72 in the model that removes 11) are influential observations.
+    From the studentized values of the values of X1 and X2, we can determine that observations 11 and 73 are influential observations.
 
 ```{r}
+
+# From class convo it is clear you wanted linear so I did rstud() method first 
+
 # initial observation
 plot(modfull,1) #modfull is y ~ XZ (above)
 
 
 # obs 11 is an influential observation, 73
 rstud <- rstudent(modfull)
-rstud
 id1 <- which.max(abs(rstud))
 n <- nrow(X2)
-k <- 3
+k <- 4
 alpha <- 0.01 
 crit <- qt(1-alpha/2,n-k-1)
 (abs(rstud)[id1] > crit)
-crit
 
 # observation 73 is our next influential observation
 modfull2 <- lm(y[-11,] ~ X2[-11, -1])
@@ -172,7 +167,45 @@ modfull3 <- lm(y[-infl_obs,] ~ X2[-infl_obs, -1])
 rstud3 <- rstudent(modfull3)
 id3 <- which.max(abs(rstud3))
 abs(rstud3)[id3] > crit
-rstud3
 
+
+# LINEAR
+
+# first test, 11 is influential
+hat_mat <- X2 %*% solve(t(X2) %*% X2) %*% t(X2)
+yhatx2 <- X2 %*% BX2
+errorest <- y - yhatx2
+lev <- diag(hat_mat)
+MSEX2 <- SSEX2 / (nrow(X2) - k)
+stud_resid <- errorest / sqrt(as.numeric(MSEX2)) * sqrt(1 - lev)
+id4 <- which.max(abs(stud_resid)) 
+id4
+abs(stud_resid)[id4] > crit
+# 11 is true 
+
+#second test, 73 is influential 
+X2_rm11 <- X2[-11,]
+hat_mat <- X2_rm11 %*% solve(t(X2_rm11) %*% X2_rm11) %*% t(X2_rm11)
+yhatx2 <- X2_rm11 %*% BX2
+errorest <- y[-11,] - yhatx2
+lev <- diag(hat_mat)
+MSEX2 <- SSEX2 / (nrow(X2_rm11) - k)
+stud_resid <- errorest / sqrt(as.numeric(MSEX2)) * sqrt(1 - lev)
+id5 <- which.max(abs(stud_resid)) 
+id5
+abs(stud_resid)[id5] > crit
+
+#third test 
+inf <- c(11,73)
+X2_rm_inf <- X2[-inf,]
+hat_mat <- X2_rm_inf %*% solve(t(X2_rm_inf) %*% X2_rm_inf) %*% t(X2_rm_inf)
+yhatx2 <- X2_rm_inf %*% BX2
+errorest <- y[-inf] - yhatx2
+lev <- diag(hat_mat)
+MSEX2 <- SSEX2 / (nrow(X2_rm_inf) - k)
+stud_resid <- errorest / sqrt(as.numeric(MSEX2)) * sqrt(1 - lev)
+id6 <- which.max(abs(stud_resid)) 
+id6
+abs(stud_resid)[id6] > crit
 
 ```
