--- a/Review and Basics of R/Review and Basics of R.qmd
+++ b/Review and Basics of R/Review and Basics of R.qmd
@@ -25,7 +25,8 @@ execute:
 ## Uploading a dataset to R
 
 ```{r}
-
+library(tidyverse)
+airfares <- read.csv("~/stat408/Review and Basics of R/Data/airfares.csv")
 ```
 
 ## Parameters and Statistics
@@ -69,7 +70,8 @@ Suppose $X \sim \mathcal{N}(2,4)$.
 What is $Pr(X > 3.5)$?
 
 ```{r, include = TRUE}
-
+1 - pnorm(3.5,2,2)
+pnorm(3.5,2,2,lower.tail = FALSE)
 ```
 
 ### b
@@ -77,7 +79,7 @@ What is $Pr(X > 3.5)$?
 What is the $0.35$ quantile/$35^{th}$ percentile of $X$?
 
 ```{r, include = TRUE}
-
+qnorm(0.35,2,2)
 ```
 
 ## Central Limit Theorem
@@ -130,7 +132,7 @@ Suppose $X \sim t_{df=10}$.
 What is $Pr(X < 2.2)$?
 
 ```{r}
-
+pt(2.2,10)
 ```
 
 ### b
@@ -138,7 +140,7 @@ What is $Pr(X < 2.2)$?
 What is the $0.8$ quantile/$80^{th}$ percentile of $X$?
 
 ```{r}
-
+qt(0.8,10)
 ```
 
 ## $F$ Distribution
@@ -170,7 +172,7 @@ Suppose $X \sim F_{df1=6,df2=21}$.
 What is $Pr(X < 1.3)$?
 
 ```{r}
-
+pf(1.3,6,21)
 ```
 
 ### b
@@ -178,7 +180,8 @@ What is $Pr(X < 1.3)$?
 Find $x$ such that $Pr(X > x) = 0.4$.
 
 ```{r}
-
+qf(1-0.4,6,21)
+qf(0.4,6,21,lower.tail = FALSE)
 ```
 
 The $F$ distribution is related to the $t$ distribution because if a random variable $T \sim t_{df=\nu}$, then $T^2 \sim F(df1=1,df2=\nu)$
@@ -227,7 +230,18 @@ A $C\%$ confidence interval for a population mean, $\mu$ is written as $$\bar{x}
 Recall the airfares dataset we previously uploaded into our R session. Assume that the data comes from the population of interest, which in this case is all domestic flights out of O'Hare International Airport. Calculate a 95% confidence interval for the mean flight distance.
 
 ```{r}
+# By hand 
+dist <- airfares$Distance
+xbar <- mean(dist)
+sx <- sd(dist)
+n <- length(dist)
+alpha <- 0.05
+crit <- qt(1-alpha/2,n-1)
+xbar + c(-1,1) * crit * sx / sqrt(n)
 
+#short cut 
+t.test(dist,conf.level = 1-alpha)
+#note t.test calculates 96% CI by default
 ```
 
 ### Interpreting a confidence interval
@@ -259,9 +273,26 @@ Go back to the previous example. Interpret the 95% CI in the context of the prob
 
 In the airfares dataset, suppose it is believed that the average distance for domestic flights from O'Hare is 1000 miles. Perform a hypothesis test for this belief with $\alpha = 0.05$.
 
-```{r}
+-   $H_0: \mu = 1000$
 
+-   $H_a: \mu \neq 1000$
+
+    How do we calculate the test statistic?
+
+    We know that if we knew mu, (xbar - mu) / (s/sqrt(n) is about tn - 1
+
+    Under H0 we can subsitute in mu = munot = 1000 and we can plug in our sample mean and sample standard deviation, s to get our test statistic, t, as well as corresponding p value.
+
+```{r}
+# note that we are using xbar, sx, and n that we defined when calculating the confidence interval
+t <- (xbar - 1000)/(sx/sqrt(n))
+# two sided t test
+p <- 2*pt(abs(t), n-1, lower.tail = FALSE)
+t
+p
 ```
+
+t = -1.285, p = 0.2172 so we fail to reject H0 and we do not have statistically significant evidence that the true average flight distance for flights out of O\'Hare is different than 1000 miles.
 
 ### What makes the hypothesis test accurate?
 
